# fake_Caja-Wipe

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure.ac
caja-wipe/: Makefile.am  cw-compat.h  cw-delete-operation.c  cw-delete-operation.h  cw-extension.c  cw-extension.h  cw-fill-operation.c  cw-fill-operation.h  cw-operation-manager.c  cw-operation-manager.h  cw-operation.c  cw-operation.h  cw-path-list.c  cw-path-list.h  cw-progress-dialog.c  cw-progress-dialog.h  cw-type-utils.h  extension.c
debian/: caja-wipe.lintian-overrides  changelog  control  copyright  gbp.conf  nautilus-wipe.lintian-overrides  rules  upstream-signing-key.pgp  watch
debian/patches/: 0001-Fix-support-for-Automake-1.12.patch  0001-Support-GTK-3.0.patch  series
debian/source/: lintian-overrides
help/: Makefile.am  Makefile.in
help/C/: caja-wipe.xml
m4/: na-nautilus-extdir.m4
nautilus-wipe/: Makefile.in
po/: POTFILES.in  de.po  fr.po  ru.po
